Fix extra white space

--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@ button {
   padding: 15px 32px;
   text-align: center;
 }
-.body {
+.main {
   background-color: #9ccef4;
 }
 .weather {
@@ -45,11 +45,11 @@ h4 {
 }
 .time {
 
-  background-color: #9ccef4;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
+  margin-top: 73px;
 }
 .w1 {
   width: 100px;
